--- a/templates/index.html
+++ b/templates/index.html
@@ -9,26 +9,60 @@
         --color-clifford: #da373d;
       }
     </style>
-    <title>Document</title>
+    <title>CaptionCall Trainer</title>
     <script src="{{ url_for('static', filename='index.js') }}"></script>
     <link rel="stylesheet" href="{{ url_for('static', filename='styles.css') }}" />
+    <link href="https://cdn.jsdelivr.net/npm/flowbite@3.1.1/dist/flowbite.min.css" rel="stylesheet" />
   </head>
-  <body class="p-4">
-    <div class="container">
-      <div class="space-y-4 grid gap-4 justify-items-center">
-        <audio controls class="w-full" id="audioPlayer">
-          <source src="{{ url_for('static', filename='call_with_mark.m4a') }}" type="audio/mpeg" />
+  <body>
+    <div class="container p-4">
+      <div class="space-y-4 justify-items-center">
+        <audio controls class="w-100" id="audioPlayer">
+          <source src="{{ url_for('static', filename='/audio/call_with_mark.m4a') }}" type="audio/mpeg" />
           Your browser does not support the audio element.
         </audio>
         <div class="w-full text-center text-sm text-gray-500" id="time-display">0:00:00</div>
-        <input type="text" id="transcript" class="w-full p-2 border rounded" placeholder="Current subtitle" readonly />
-        <textarea
-          id="editable-transcript"
-          class="w-full p-2 border rounded"
-          rows="4"
-          placeholder="Full transcript"
-        ></textarea>
+        <form>
+          <div class="transcription-container flex gap-4 w-full justify-center">
+            <div class="min-w-xl">
+              <label for="transcript" class="block mb-2 text-sm font-medium text-gray-900"> Current subtitle </label>
+
+              <input
+                type="text"
+                id="transcript"
+                class="block w-full p-4 text-gray-900 border border-gray-300 rounded-lg bg-gray-50 text-base focus:ring-blue-500 focus:border-blue-500 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
+                placeholder="Current subtitle"
+                readonly
+              />
+            </div>
+            <div class="">
+              <label for="editable-transcript" class="block mb-2 text-sm font-medium text-gray-900">
+                Your corrections (make corrections of the live transcript for your assessment)
+              </label>
+
+              <textarea
+                id="editable-transcript"
+                class="block p-2.5 w-full text-sm text-gray-900 bg-gray-50 rounded-lg border border-gray-300 focus:ring-blue-500 focus:border-blue-500 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500 resize-y"
+                placeholder="Full transcript streams here..."
+                rows="20"
+                cols="30"
+                autocomplete="off"
+                autocorrect="off"
+                spellcheck="false"
+              ></textarea>
+            </div>
+          </div>
+          <button
+          type="submit"
+          id="submit"
+          class="mx-auto px-6 py-3.5 text-base font-medium text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 rounded-lg text-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800"
+        >
+          Submit
+        </button>
+        </form>
+        
       </div>
     </div>
+    <script src="https://cdn.jsdelivr.net/npm/flowbite@3.1.1/dist/flowbite.min.js"></script>
   </body>
 </html>
