--- a/templates/index.html
+++ b/templates/index.html
@@ -27,13 +27,15 @@
             <div class="min-w-xl">
               <label for="transcript" class="block mb-2 text-sm font-medium text-gray-900"> Current subtitle </label>
 
-              <input
+              <textarea
                 type="text"
                 id="transcript"
-                class="block w-full p-4 text-gray-900 border border-gray-300 rounded-lg bg-gray-50 text-base focus:ring-blue-500 focus:border-blue-500 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
+                class="block p-2.5 w-full text-sm text-gray-900 bg-gray-50 rounded-lg border border-gray-300 focus:ring-blue-500 focus:border-blue-500 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500 resize-y"
                 placeholder="Current subtitle"
                 readonly
-              />
+                rows="20"
+                cols="30"
+              ></textarea>
             </div>
             <div class="">
               <label for="editable-transcript" class="block mb-2 text-sm font-medium text-gray-900">
@@ -53,14 +55,13 @@
             </div>
           </div>
           <button
-          type="submit"
-          id="submit"
-          class="mx-auto px-6 py-3.5 text-base font-medium text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 rounded-lg text-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800"
-        >
-          Submit
-        </button>
+            type="submit"
+            id="submit"
+            class=" mt-4 px-6 py-3.5 text-base font-medium text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 rounded-lg text-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800"
+          >
+            Submit
+          </button>
         </form>
-        
       </div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/flowbite@3.1.1/dist/flowbite.min.js"></script>
