--- a/templates/index.html
+++ b/templates/index.html
@@ -109,17 +109,10 @@
                 </button>
               </div>
               <!-- Modal body -->
-              <div class="p-4 md:p-5 space-y-4" id="score-modal-body">
-                <p class="text-base leading-relaxed text-gray-500 dark:text-gray-400">
-                  With less than a month to go before the European Union enacts new consumer privacy laws for its
-                  citizens, companies around the world are updating their terms of service agreements to comply.
-                </p>
-                <p class="text-base leading-relaxed text-gray-500 dark:text-gray-400">
-                  The European Union’s General Data Protection Regulation (G.D.P.R.) goes into effect on May 25 and is
-                  meant to ensure a common set of data rights in the European Union. It requires organizations to notify
-                  users as soon as possible of high-risk data breaches that could personally affect them.
-                </p>
+              <div class="p-4 md:p-5 space-y-4 text-white" id="score-modal-body">
+                <p class="text-white">Loading score...</p>
               </div>
+
               <!-- Modal footer -->
               <div class="flex items-center p-4 md:p-5 border-t border-gray-200 rounded-b dark:border-gray-600">
                 <!-- <button
