--- a/templates/auth/login.html
+++ b/templates/auth/login.html
@@ -5,19 +5,31 @@
 {% block heading %}Login to Your Account{% endblock %}
 
 {% block content %}
-    {% if error %}
-        <p class="text-red-500 text-sm text-center">{{ error }}</p>
-    {% endif %}
+    {% with messages = get_flashed_messages() %}
+                {% if messages %}
+                    <ul class="text-red-500 text-sm text-center">
+                        {% for message in messages %}
+                            <li>{{ message }}</li>
+                        {% endfor %}
+                    </ul>
+                {% endif %}
+            {% endwith %}
 
         <form action="{{ url_for('auth.login') }}" method="POST" class="space-y-4">
+            
             <div>
-                <label for="email" class="block text-gray-700">Email</label>
-                <input type="email" id="email" name="email" required
+                <label for="first_name" class="block text-gray-700">First Name</label>
+                <input type="text" id="first_name" name="first_name" required
                     class="w-full px-4 py-2 border rounded-lg focus:ring-2 focus:ring-blue-500">
             </div>
             <div>
-                <label for="password" class="block text-gray-700">Password</label>
-                <input type="password" id="password" name="password" required
+                <label for="last_name" class="block text-gray-700">Last Name</label>
+                <input type="text" id="last_name" name="last_name" required
+                    class="w-full px-4 py-2 border rounded-lg focus:ring-2 focus:ring-blue-500">
+            </div>
+            <div>
+                <label for="email" class="block text-gray-700">Email</label>
+                <input type="email" id="email" name="email" required
                     class="w-full px-4 py-2 border rounded-lg focus:ring-2 focus:ring-blue-500">
             </div>
 			<div class="flex items-start mb-5">
