--- a/templates/index.html
+++ b/templates/index.html
@@ -53,7 +53,7 @@
       <div class="space-y-4 justify-items-center">
         <!-- TODO make dynamic -->
         <audio controls class="w-100" id="audioPlayer">
-          <source src="{{ url_for('static', filename='audio/call_with_rob.m4a') }}" type="audio/mpeg" />
+          <source src="{{ url_for('static', filename='audio/caption_call.m4a') }}" type="audio/mpeg" />
           Your browser does not support the audio element.
         </audio>
         <div class="w-full text-center text-sm text-gray-500" id="time-display">0:00:00</div>
