--- a/templates/index.html
+++ b/templates/index.html
@@ -73,9 +73,17 @@
               ></textarea>
             </div> -->
             <div class="">
-              <div id="welcome-banner" class="bg-blue-800 text-white text-center p-4 shadow-lg m-4 border border-blue-900 rounded-lg">
-                  <p class="text-lg font-semibold">🚀 Welcome {{current_user.first_name }} {{ current_user.last_name }}.</p>
-                  <p class="text-md font-semibold">Instructions: Modify the text of the conversation as your hear it, correcting inaccuracies and adding audio cues like [YAWN] as necessary. Ignore the text with "..." and only edit the others.</p>
+              <div
+                id="welcome-banner"
+                class="bg-blue-800 text-white text-center p-4 shadow-lg m-4 border border-blue-900 rounded-lg"
+              >
+                <p class="text-lg font-semibold">
+                  🚀 Welcome {{current_user.first_name }} {{ current_user.last_name }}.
+                </p>
+                <Please class="text-md font-semibold">
+                  Instructions: Modify the text of the conversation as your hear it, correcting inaccuracies and adding
+                  audio cues like [YAWN] as necessary.
+                Please use only directional keys and mouse to navigate ⬆️⬇️⬅️➡️</p>
               </div>
               <label for="editable-transcript" class="block mb-2 text-sm font-medium text-gray-900"> </label>
 
