--- a/templates/create_test.html
+++ b/templates/create_test.html
@@ -22,7 +22,7 @@
             class="w-full px-3 py-2 text-gray-700 border rounded-lg focus:outline-none"
             placeholder="Enter your text here"
           ></textarea>
-          <span class="error-message text-red-300 text-"></span>
+          <span class="error-message text-red-300 text-sm"></span>
         </div>
         <div class="mb-4">
           <label for="test-transcript" class="block text-sm font-medium text-gray-700 mb-2"
@@ -35,7 +35,7 @@
             class="w-full px-3 py-2 text-gray-700 border rounded-lg focus:outline-none"
             placeholder="Enter your text here"
           ></textarea>
-          <span class="error-message text-red-300 text-"></span>
+          <span class="error-message text-red-300 text-sm"></span>
         </div>
         <div class="mb-4">
           <label for="name-of-test" class="block text-sm font-medium text-gray-700 mb-2"
@@ -48,7 +48,7 @@
             class="w-full px-3 py-2 text-gray-700 border rounded-lg focus:outline-none"
             placeholder="Enter text"
           />
-          <span class="error-message text-red-300"></span>
+          <spsman class="error-message text-red-300"></spsman>
         </div>
         <div class="mb-6">
           <label for="fileupload" class="block text-sm font-medium text-gray-700 mb-2"
@@ -61,7 +61,20 @@
             name="fileupload"
             class="w-full text-sm text-gray-500 file:mr-4 file:py-2 file:px-4 file:rounded-full file:border-0 file:text-sm file:font-semibold file:bg-blue-50 file:text-blue-700 hover:file:bg-blue-100"
           />
-          <span class="error-message text-red-300 text-"></span>
+          <span class="error-message text-red-300 text-sm"></span>
+        </div>
+        <div class="mb-6">
+          <label for="audiofileupload" class="block text-sm font-medium text-gray-700 mb-2"
+            >Please upload the audio file here, this is the audio the test taker will hear, preferred format = .m4a
+           </label
+          >
+          <input
+            type="file"
+            id="audio-file-upload"
+            name="audiofileupload"
+            class="w-full text-sm text-gray-500 file:mr-4 file:py-2 file:px-4 file:rounded-full file:border-0 file:text-sm file:font-semibold file:bg-blue-50 file:text-blue-700 hover:file:bg-blue-100"
+          />
+          <span class="error-message text-red-300 text-sm"></span>
         </div>
         <button
           id="submit"
@@ -75,3 +88,4 @@
     <script></script>
   </body>
 </html>
+<!-- TODO add audio file upload -->
