--- a/templates/index.html
+++ b/templates/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+b<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -51,12 +51,11 @@
     </script>
     <div class="container p-4">
       <div class="space-y-4 justify-items-center">
-        <!-- TODO make dynamic -->
-        <audio controls class="w-100" id="audioPlayer">
-          <source src="{{ url_for('static', filename='audio/caption_call.m4a') }}" type="audio/mpeg" />
-          Your browser does not support the audio element.
-        </audio>
-        <div class="w-full text-center text-sm text-gray-500" id="time-display">0:00:00</div>
+       
+        <div class="w-full text-center text-sm text-gray-500" id="time-display">0:00:00
+          <button type="button" class="mx-auto block focus:outline-none text-white bg-green-700 hover:bg-green-800 focus:ring-4 focus:ring-green-300 font-medium rounded-lg text-sm px-5 py-2.5 me-2 mb-2 dark:bg-green-600 dark:hover:bg-green-700 dark:focus:ring-green-800" id="start-test">Start Test</button>
+        </div>
+
         <form>
           <div class="transcription-container flex gap-4 w-full justify-center">
             <!-- <div class="min-w-xl">
@@ -179,6 +178,11 @@
           </div>
         </div>
       </div>
+       <!-- TODO make dynamic -->
+       <audio controls class="w-100 invisible" id="audioPlayer" >
+        <source src="{{ url_for('static', filename='/audio/caption_call.m4a') }}" type="audio/mpeg" />
+        Your browser does not support the audio element.
+      </audio>
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.0.1/socket.io.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/flowbite@3.1.1/dist/flowbite.min.js"></script>
