--- a/templates/index.html
+++ b/templates/index.html
@@ -1,4 +1,4 @@
-b<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -48,8 +48,11 @@ b<!DOCTYPE html>
         const menu = document.getElementById('user-menu');
         menu.classList.toggle('hidden');
       }
+      // console.log('test srt', "{{srt_file}}");
+
     </script>
     <div class="container p-4">
+      <input id="srt-to-stream" class="hidden" value="{{srt_file}}"></input>
       <div class="space-y-4 justify-items-center">
        
         <div class="w-full text-center text-sm text-gray-500" id="time-display">0:00:00
@@ -178,9 +181,8 @@ b<!DOCTYPE html>
           </div>
         </div>
       </div>
-       <!-- TODO make dynamic -->
        <audio controls class="w-100 invisible" id="audioPlayer" >
-        <source src="{{ url_for('static', filename='/audio/caption_call.m4a') }}" type="audio/mpeg" />
+        <source src="{{url_for('static', filename='' + audio_file)}}" type="audio/mpeg" />
         Your browser does not support the audio element.
       </audio>
     </div>
