--- a/templates/index.html
+++ b/templates/index.html
@@ -17,6 +17,8 @@
   <body>
     <header class="flex justify-between items-center py-4 px-4 bg-gray-200 shadow-md">
       <h1 class="text-2xl font-bold">CaptionCall Tester</h1>
+      <a href="/transcription/create_test">Create new test</a>
+
       <div class="relative">
         <button
           class="flex items-center space-x-2 focus:outline-none"
