--- a/templates/stats.html
+++ b/templates/stats.html
@@ -8,6 +8,8 @@
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body class="bg-gray-100">
+	<p>tests_per_month</p>
+	{{tests_per_month}}
     <div class="container mx-auto px-4 py-8">
         <h1 class="text-3xl font-bold text-center mb-8">Analytics Dashboard</h1>
 
