fix: getting tests data

--- a/templates/index.html
+++ b/templates/index.html
@@ -10,7 +10,8 @@
       }
     </style>
     <title>CaptionCall Trainer</title>
-    <script src="{{ url_for('static', filename='index.js') }}"></script>
+    <script src="https://unpkg.com/@tailwindcss/browser@4"></script>
+
     <link rel="stylesheet" href="{{ url_for('static', filename='styles.css') }}" />
     <link href="https://cdn.jsdelivr.net/npm/flowbite@3.1.1/dist/flowbite.min.css" rel="stylesheet" />
   </head>
@@ -50,7 +51,6 @@
         const menu = document.getElementById('user-menu');
         menu.classList.toggle('hidden');
       }
-      // console.log('test srt', "{{srt_file}}");
     </script>
     <div class="container p-4">
       <input id="srt-to-stream" class="hidden" value="{{srt_file}}" />
