--- a/templates/take_test.html
+++ b/templates/take_test.html
@@ -59,38 +59,36 @@
       }
       // console.log('test srt', "{{srt_file}}");
     </script>
-    <div class="container p-4">
+    <div class="container">
       <input id="srt-to-stream" class="hidden" value="{{current_test.srt_file_path}}" />
-      <input id="test-id" class="" value="{{current_test.id}}" />
+      <input id="test-id" class="hidden" value="{{current_test.id}}" />
 
-      <div class="space-y-4 justify-items-center">
+      <div class="m-4">
+        <div
+          id="welcome-banner"
+          class="bg-blue-800 text-white text-center p-4 shadow-lg m-4 border border-blue-900 rounded-lg"
+        >
+          <p class="text-lg font-semibold">🚀 Welcome {{current_user.first_name }} {{ current_user.last_name }}.</p>
+          <p class="text-md font-semibold">
+            Please Instructions: Modify the text of the conversation as your hear it, correcting inaccuracies and adding
+            audio cues like [YAWN] as necessary. Please use only directional keys and mouse to navigate ⬆️⬇️⬅️➡️
+          </p>
+        </div>
         <h2 id="current-test" class="text-xl font-bold">
           Current Test: <span id="current-test-name">{{current_test.name_of_test}}</span>
         </h2>
         <div class="w-full text-center text-sm text-gray-500" id="time-display">0:00:00</div>
-        <button
-          type="button"
-          class="mx-auto block focus:outline-none text-white bg-green-700 hover:bg-green-800 focus:ring-4 focus:ring-green-300 font-medium rounded-lg text-sm px-5 py-2.5 me-2 mb-2 dark:bg-green-600 dark:hover:bg-green-700 dark:focus:ring-green-800"
-          id="start-test"
-        >
-          Start Test
-        </button>
+
         <form>
           <div class="transcription-container flex gap-4 w-full justify-center">
-            <div class="">
-              <div
-                id="welcome-banner"
-                class="bg-blue-800 text-white text-center p-4 shadow-lg m-4 border border-blue-900 rounded-lg"
+            <div class="w-full">
+              <button
+                type="button"
+                class="mx-auto block focus:outline-none text-white bg-green-700 hover:bg-green-800 focus:ring-4 focus:ring-green-300 font-medium rounded-lg text-sm px-5 py-2.5 me-2 mb-2 dark:bg-green-600 dark:hover:bg-green-700 dark:focus:ring-green-800"
+                id="start-test"
               >
-                <p class="text-lg font-semibold">
-                  🚀 Welcome {{current_user.first_name }} {{ current_user.last_name }}.
-                </p>
-                <p class="text-md font-semibold">
-                  Please Instructions: Modify the text of the conversation as your hear it, correcting inaccuracies and
-                  adding audio cues like [YAWN] as necessary. Please use only directional keys and mouse to navigate
-                  ⬆️⬇️⬅️➡️
-                </p>
-              </div>
+                Start Test
+              </button>
               <label for="editable-transcript" class="block mb-2 text-sm font-medium text-gray-900"> </label>
 
               <textarea
@@ -210,6 +208,7 @@
               loadTest(currentTestIndex);
             } else {
               console.log('All tests completed');
+              alert('All tests completed');
               // You can add code here to handle the completion of all tests
             }
           });
